--- a/memo/bootstrap.html
+++ b/memo/bootstrap.html
@@ -33,7 +33,12 @@
         color: blue;
         font-weight: bold;
       }
-      .input_box{width: 500px;margin: 0 auto 50px;padding: 30px;border: 3px solid black;border-radius: 5px;}
+      .input_box{
+        width: 500px;
+        margin: 0 auto 50px;
+        padding: 30px;border: 3px solid black;
+        border-radius: 5px;
+      }
     </style>
 
   </head>
