--- a/homework/1st_week/shop.html
+++ b/homework/1st_week/shop.html
@@ -2,12 +2,18 @@
 <html lang="ko">
 <head>
 	<meta charset="UTF-8">
+	<link href="https://fonts.googleapis.com/css?family=Do+Hyeon|Noto+Sans+KR&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Do+Hyeon&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Do+Hyeon|Gaegu|Noto+Sans+KR&display=swap" rel="stylesheet">
 	<style>
-		.wrap{max-width: 500px;margin: auto;padding: 30px;border: 1px solid #ddd;border-radius: 10px;box-shadow: 6px 12px 18px 0 #aaa}
+		body{font-family: 'Noto Sans KR', sans-serif;color: #333;}
+		.wrap{max-width: 500px;margin: 20px auto;padding: 30px;border: 1px solid #ddd;border-radius: 10px;box-shadow: 6px 12px 18px 0 #aaa}
 		.img img{max-width: 100%;height: auto;}
 		.item, .order{text-align: center;}
+		.item h1{font-family: 'Do Hyeon';font-size: 40px;margin: 0;}
 		.item div p{font-size: 20px;font-weight: 600;}
 		.order{border-top: 1px solid #ddd;}
+		.order h2{font-family: 'Gaegu';font-size: 30px;}
 		.order p span{display: inline-block;width: 100px;}
 		.order .ip{padding: 6px; width: 220px;outline: none;}
 		.order .ip:focus{border-color: red;}
